--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "morgan": "~1.8.1",
     "nightmare": "^2.10.0",
     "nunjucks": "^3.0.1",
+    "pg-monitor": "^0.8.2",
     "pg-promise": "^6.5.1",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "short-id": "0.1.0-1"
   }
 }
