--- a/config/config.json
+++ b/config/config.json
@@ -1,12 +1,12 @@
 {
   "development": {
-    "host"    : "localhost",
-    "port"    : 5433,
-    "database": "bookstore",
     "username": "postgres",
-    "password": "abc",
-    "dialect" : "postgres",
-    "schema"  : "public",
-    "logging" : false
+    "password": "sandiego",
+    "database": "book_store",
+    "host": "localhost",
+    "port": 5432,
+    "dialect": "postgres",
+    "schema": "public",
+    "logging": false
   }
 }
